--- a/app.py.ipynb
+++ b/app.py.ipynb
@@ -2,19 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5c436518",
+   "execution_count": 12,
+   "id": "f8540a21",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies\n",
-    "from flask import Flask"
+    "from flask import Flask\n",
+    "import datetime as dt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy import create_engine, func\n",
+    "\n",
+    "from flask import Flask, jsonify"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "92287fe4",
+   "execution_count": 13,
+   "id": "70d08493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create engine\n",
+    "engine = create_engine(\"sqlite:///hawaii.sqlite\")\n",
+    "\n",
+    "# reflect database\n",
+    "Base = automap_base()\n",
+    "Base.prepare(engine, reflect = True)\n",
+    "\n",
+    "# save references to each table\n",
+    "Measurement = Base.classes.measurement\n",
+    "Station = Base.classes.station\n",
+    "\n",
+    "# create session to link python\n",
+    "session = Session(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "67f50edc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,21 +56,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "324f0243",
+   "execution_count": 15,
+   "id": "81593cc4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create flask routes\n",
     "@app.route('/')\n",
-    "def hello_world():\n",
-    "    return 'Hello world'"
+    "def welcome():\n",
+    "    return(\n",
+    "    '''\n",
+    "    Welcome to the Climate Analysis API!\n",
+    "    Available Routes:\n",
+    "    /api/v1.0/precipitation\n",
+    "    /api/v1.0/stations\n",
+    "    /api/v1.0/tobs\n",
+    "    /api/v1.0/temp//2017-06-01/2017-06-30\n",
+    "    ''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2ad640eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# precipitation app route\n",
+    "@app.route(\"/api/v1.0/precipitation\")\n",
+    "def precipitation():\n",
+    "   prev_year = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
+    "   precipitation = session.query(Measurement.date, Measurement.prcp).\\\n",
+    "    filter(Measurement.date >= prev_year).all()\n",
+    "   precip = {date: prcp for date, prcp in precipitation}\n",
+    "   return jsonify(precip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a56fef1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# station app route\n",
+    "def stations():\n",
+    "    results = session.query(Station.station).all()\n",
+    "    stations = list(np.ravel(results))\n",
+    "    return jsonify(stations=stations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4eb8ea71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# temperature observation app route\n",
+    "def temp_monthly():\n",
+    "    prev_year = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
+    "    results = session.query(Measurement.tobs).\\\n",
+    "      filter(Measurement.station == 'USC00519281').\\\n",
+    "      filter(Measurement.date >= prev_year).all()\n",
+    "    temps = list(np.ravel(results))\n",
+    "    return jsonify(temps=temps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3d6312d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# temperature statistics app route\n",
+    "@app.route(\"/api/v1.0/temp/<start>\")\n",
+    "@app.route(\"/api/v1.0/temp/<start>/<end>\")\n",
+    "def stats(start=None, end=None):\n",
+    "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]\n",
+    "\n",
+    "    if not end:\n",
+    "        results = session.query(*sel).\\\n",
+    "            filter(Measurement.date >= start).all()\n",
+    "        temps = list(np.ravel(results))\n",
+    "        return jsonify(temps)\n",
+    "\n",
+    "    results = session.query(*sel).\\\n",
+    "        filter(Measurement.date >= start).\\\n",
+    "        filter(Measurement.date <= end).all()\n",
+    "    temps = list(np.ravel(results))\n",
+    "    return jsonify(temps)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34d586b2",
+   "id": "bf7ce2bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -46,39 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd1f6db5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "355accef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "835f9872",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5c8104f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4891424",
+   "id": "fd86bc2a",
    "metadata": {},
    "outputs": [],
    "source": []
